--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "require": {
     "php": ">=5.6.0",
     "composer-plugin-api": "^1.0",
-    "phpdish/plugin-installer": "*@dev"
+    "symfony/finder": "^2.0|^3.0|^4.0"
   },
   "require-dev": {
     "composer/composer": "^1.3"
@@ -25,10 +25,10 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "PHPDish\\PluginInstaller\\Test\\": "tests/"
+      "PHPDish\\PluginInstaller\\Tests\\": "tests/"
     }
   },
   "extra": {
-    "class": "PHPDish\\PluginInstaller\\PluginInstallerPlugin"
+    "class": "PHPDish\\PluginInstaller\\PluginInstaller"
   }
 }
